--- a/index.html
+++ b/index.html
@@ -24,18 +24,11 @@
         <!--<![endif]-->
 </head>
 <body>
-
-
-
-
-
-
-
 <div class="pure-menu pure-menu-horizontal">
-    <a href="#" class="pure-menu-heading">Your Logo</a>
+    <a href="#" class="pure-menu-heading">Cloud Compare</a>
     <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
-        <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Pricing</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">1</a></li>
+        <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">2</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
     </ul>
 </div>
@@ -43,7 +36,7 @@
 <div class="banner">
     <h1 class="banner-head">
         Simple Pricing.<br>
-        Try before you buy.
+        Compare Different Cloud for Computing
     </h1>
 </div>
 
@@ -52,10 +45,10 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-free">
                 <div class="pricing-table-header">
-                    <h2>Personal</h2>
+                    <h2>Cloud 1</h2>
 
                     <span class="pricing-table-price">
-                        $5 <span>per month</span>
+                        $0 <span>per month</span>
                     </span>
                 </div>
 
@@ -75,10 +68,10 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-biz pricing-table-selected">
                 <div class="pricing-table-header">
-                    <h2>Small Business</h2>
+                    <h2>Cloud 2</h2>
 
                     <span class="pricing-table-price">
-                        $25 <span>per month</span>
+                        $0 <span>per month</span>
                     </span>
                 </div>
 
@@ -98,10 +91,10 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-enterprise">
                 <div class="pricing-table-header">
-                    <h2>Enterprise</h2>
+                    <h2>Cloud 3</h2>
 
                     <span class="pricing-table-price">
-                        $45 <span>per month</span>
+                        $00 <span>per month</span>
                     </span>
                 </div>
 
