--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <!--[if gt IE 8]><!-->
             <link rel="stylesheet" href="css/layouts/pricing.css">
         <!--<![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131361610-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-131361610-1');
+    </script>
+
 </head>
 <body>
 <div class="pure-menu pure-menu-horizontal">
