--- a/index.html
+++ b/index.html
@@ -110,11 +110,28 @@ var data= {
   }
 }
 
+function loadJSON(path, success, error){
+  var xhr = new XMLHttpRequest();
+  xhr.onreadystatechange = function()
+  {
+      if (xhr.readyState === XMLHttpRequest.DONE) {
+          if (xhr.status === 200) {
+              if (success)
+                  success(JSON.parse(xhr.responseText));
+          } else {
+              if (error)
+                  error(xhr);
+          }
+      }
+  };
+  xhr.open("GET", path, true);
+  xhr.send();
+}
+
 function getValue(dataAddress){
   var res = dataAddress.split(':').reduce(function(o, k) {
     return o && o[k];
 }, data);
-   alert(dataAddress);
    return res.price;
 }
 
@@ -141,6 +158,11 @@ slider.oninput = function() {
     }
   }
 } 
+
+loadJSON('data/dummy.json',
+       function(data) { console.log(data); },
+       function(xhr) { console.error(xhr); }
+);
 </script>
 
 </body>
