--- a/index.html
+++ b/index.html
@@ -10,16 +10,41 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    /* Style the table */
+
+    table {
+      border-collapse: collapse;
+      border-spacing: 0;
+      width: 80%;
+      border: 1px solid #ddd;
+    }
+
+    /* Style table headers and table data */
+
+    th {
+      background-color: rgb(0, 7, 0);
+      color: white;
+    }
+
     th,
     td {
-      padding: 15px;
+      text-align: center;
+      padding: 25px;
+    }
+
+    th:first-child,
+    td:first-child {
       text-align: left;
     }
 
-    th {
-      background-color: #4CAF50;
-      color: white;
+    /* Zebra-striped table rows */
+
+    tr:nth-child(even) {
+      background-color: #f2f2f2
     }
+
+
+
 
     .slider {
       -webkit-appearance: none;
@@ -108,15 +133,13 @@
       </div>
     </div>
 
-    <div style="overflow-x:auto;">
-
-
-      <table id="sh">
+    <div style="overflow-x:auto;" align="center">
+      <table id="sh" class="w3-row-padding">
         <tr>
-          <th>Cloud </th>
-          <th id="aws">AWS</th>
-          <th id="azure">Azure</th>
-          <th id="gcp">Google Cloud</th>
+          <th style="width:20%">Cloud </th>
+          <th id="aws" style="width:10%">AWS</th>
+          <th id="azure" style="width:10%">Azure</th>
+          <th id="gcp" style="width:10%">Google Cloud</th>
         </tr>
         <tr>
           <td>Size</td>
@@ -160,7 +183,7 @@
 
     <h2> Test being done</h2>
 
-    In this test, we took simple Nginx server and hosted a static page containing text "Comming Soon" which is rendered in plain
+    In this test, we took simple Nginx server and hosted a static page containing text "Coming Soon" which is rendered in plain
     text. With smaller size network latency will not affect performance.
 
     </br>Example response:
@@ -170,7 +193,7 @@ Content-Type: text/plain; charset=UTF-8
 Server: Example
 Date: Wed, 17 Apr 2013 12:00:00 GMT
 
-Comming Soon
+Coming Soon
 </pre>
     <script>
 
