--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    /* Style the table */
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Style the table */
 
-    table {
-      border-collapse: collapse;
-      border-spacing: 0;
-      width: 80%;
-      border: 1px solid #ddd;
-    }
+table {
+border-collapse: collapse;
+border-spacing: 0;
+width: 80%;
+border: 1px solid #ddd;
+}
 
-    /* Style table headers and table data */
+/* Style table headers and table data */
 
     th {
       background-color: rgb(0, 7, 0);
@@ -76,6 +76,15 @@
       cursor: pointer;
     }
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131361610-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+   gtag('config', 'UA-131361610-1');
+  </script>
+
 </head>
 
 <body>
