--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title> Compar Cloud</title>
+<title> Compare Cloud Prices</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -163,32 +163,27 @@
     </br>
     </br>
 
-    <div style="overflow-x:auto;" align="center">
-      <div class="w3-row-padding">
-        <div class="w3-col m1">
-          Duration:
-        </div>
-        <div class="w3-col m1">
-          <input  vertical-align="middle" class="w3-input w3-border" type="number" placeholder="1">
-        </div>
-        <div class="w3-col m3">
-          <input class="w3-radio" type="radio" name="gender" value="days" checked>
-          <label>Days</label>
-
-          <input class="w3-radio" type="radio" name="gender" value="months">
-          <label>Months</label>
-
-          <input class="w3-radio" type="radio" name="gender" value="years">
-          <label>Years</label>
-        </div>
-
-        <div class="w3-col m3" vertical-align="middle">
-          Number of visits:
-          <label id="demo" /> per hour
-        </div>
-        <div class="w3-col m4">
-          <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-        </div>
+    <div class="w3-row-padding">
+      <div class="w3-col m1">
+        Duration:
+      </div>
+      <div class="w3-col m1" ver>
+        <input vertical-align="middle" class="w3-input w3-border" type="number" placeholder="1">
+      </div>
+      <div class="w3-col m3">
+        <input class="w3-radio" type="radio" name="gender" value="days" checked>
+        <label>Days</label>
+        <input class="w3-radio" type="radio" name="gender" value="months">
+        <label>Months</label>
+        <input class="w3-radio" type="radio" name="gender" value="years">
+        <label>Years</label>
+      </div>
+      <div class="w3-col m2" vertical-align="middle">
+        Number of visits:
+        <label id="demo" /> per hour
+      </div>
+      <div class="w3-col m4">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
       </div>
     </div>
 
