--- a/index.html
+++ b/index.html
@@ -1,276 +1,1 @@
-<!DOCTYPE html>
-<html>
-<title> Compare Cloud Prices</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-light-blue.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    /* Style the table */
-
-    head,
-    body {
-      font-size: 20px
-    }
-
-    table {
-      border-collapse: collapse;
-      border-spacing: 0;
-      width: 80%;
-      border: 1px solid #ddd;
-    }
-
-    /* Style table headers and table data */
-
-    th {
-      background-color: rgb(0, 7, 0);
-      color: white;
-    }
-
-    th,
-    td {
-      text-align: center;
-      padding: 25px;
-    }
-
-    th:first-child,
-    td:first-child {
-      text-align: left;
-    }
-
-    /* Zebra-striped table rows */
-
-    tr:nth-child(even) {
-      background-color: #f2f2f2
-    }
-
-
-
-
-    .slider {
-      -webkit-appearance: none;
-      width: 100%;
-      height: 15px;
-      border-radius: 5px;
-      background: #d3d3d3;
-      outline: none;
-      opacity: 0.7;
-      -webkit-transition: .2s;
-      transition: opacity .2s;
-    }
-
-    .slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      background: #4CAF50;
-      cursor: pointer;
-    }
-
-    .slider::-moz-range-thumb {
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      background: #4CAF50;
-      cursor: pointer;
-    }
-  </style>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131361610-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-131361610-1');
-  </script>
-
-</head>
-
-<body>
-
-  <!-- Header -->
-  <header class="w3-container w3-theme w3-padding" id="myHeader">
-    <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i>
-    <div class="w3-center">
-      <h4>Prices as of 11 Jan 1997</h4>
-      <h1 class="w3-xxxlarge w3-animate-bottom">Compare Cloud</h1>
-    </div>
-  </header>
-
-  <!-- Page content -->
-  <div class="w3-content" style="max-width:1532px;">
-
-    <div class="w3-container w3-margin-top" id="rooms">
-      <h3>Hosting static website on below cloud</h3>
-    </div>
-
-
-
-    <div style="overflow-x:auto;" align="center">
-      <table id="sh" class="w3-row-padding">
-        <tr>
-          <th style="width:20%">Cloud </th>
-          <th id="aws" style="width:10%">AWS</th>
-          <th id="azure" style="width:10%">Azure</th>
-          <th id="gcp" style="width:10%">Google Cloud</th>
-        </tr>
-        <tr>
-          <td>Size</td>
-          <td>t3.nano</td>
-          <td>A0</td>
-          <td>f1-micro</td>
-        </tr>
-        <tr>
-          <td>Price</td>
-          <td>0 $/hr</td>
-          <td>0 $/hr</td>
-          <td>0 $/hr</td>
-        </tr>
-        <tr>
-          <td>CPU</td>
-          <td>X</td>
-          <td>X</td>
-          <td>X</td>
-        </tr>
-        <tr>
-          <td>RAM</td>
-          <td>X</td>
-          <td>X</td>
-          <td>X</td>
-        </tr>
-
-        <tr>
-          <td>Disk</td>
-          <td>X</td>
-          <td>X</td>
-          <td>X</td>
-        </tr>
-        <tr>
-          <td>Network</td>
-          <td>X</td>
-          <td>X</td>
-          <td>X</td>
-        </tr>
-      </table>
-    </div>
-
-    </br>
-    </br>
-
-    <div class="w3-row-padding">
-      <div class="w3-col m1">
-        Duration:
-      </div>
-      <div class="w3-col m1" ver>
-        <input vertical-align="middle" class="w3-input w3-border" type="number" placeholder="1">
-      </div>
-      <div class="w3-col m3">
-        <input class="w3-radio" type="radio" name="gender" value="days" checked>
-        <label>Days</label>
-        <input class="w3-radio" type="radio" name="gender" value="months">
-        <label>Months</label>
-        <input class="w3-radio" type="radio" name="gender" value="years">
-        <label>Years</label>
-      </div>
-      <div class="w3-col m2" vertical-align="middle">
-        Number of visits:
-        <label id="demo" /> per hour
-      </div>
-      <div class="w3-col m4">
-        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-      </div>
-    </div>
-
-    <h2> Test being done</h2>
-    In this test, we took simple Nginx server and hosted a static page containing text "Coming Soon" which is rendered in plain
-    text. With smaller size network latency will not affect performance.
-
-    </br>Example response:
-    <pre>HTTP/1.1 200 OK
-Content-Length: 15
-Content-Type: text/plain; charset=UTF-8
-Server: Example
-Date: Wed, 17 Apr 2013 12:00:00 GMT
-
-Coming Soon
-</pre>
-    <script>
-
-      var data = {};
-
-      function loadJSON(path, success, error) {
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function () {
-          if (xhr.readyState === XMLHttpRequest.DONE) {
-            if (xhr.status === 200) {
-              if (success)
-                success(JSON.parse(xhr.responseText));
-            } else {
-              if (error)
-                error(xhr);
-            }
-          }
-        };
-        xhr.open("GET", path, true);
-        xhr.send();
-      }
-
-      function getValue(dataAddress) {
-        var res = dataAddress.split(':').reduce(function (o, k) {
-          return o && o[k];
-        }, data);
-        return res.price;
-      }
-
-
-      var slider = document.getElementById("myRange");
-      var output = document.getElementById("demo");
-      output.innerHTML = slider.value;
-      var table = document.getElementById("sh");
-      var testsuite = "static-site";
-
-      slider.oninput = function () {
-        output.innerHTML = this.value;
-        var len = table.rows.length;
-        cloudRow = table.rows[0].cells;
-        sizeRow = table.rows[1].cells;
-        for (i = 0; i < len; i++) {
-          columns = table.rows[i].cells;
-          field = columns[0];
-          if (field.innerHTML == "Price") {
-            for (j = 1; j < columns.length; j++) {
-              resolution = cloudRow[j].id + ":" + testsuite + ":" + sizeRow[j].innerHTML
-              columns[j].innerHTML = getValue(resolution.toLowerCase());
-            }
-          }
-        }
-      }
-
-      loadJSON('data/dummy.json',
-        function (urlData) { data = urlData; },
-        function (xhr) { console.error(xhr); }
-      );
-    </script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-      (function () {
-        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-        s1.async = true;
-        s1.src = 'https://embed.tawk.to/5c5fe70f7cf662208c94dcb4/default';
-        s1.charset = 'UTF-8';
-        s1.setAttribute('crossorigin', '*');
-        s0.parentNode.insertBefore(s1, s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
-
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Cloud Compare</title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="description" content="Cloud Compare PWA"><meta name="author" content="Apptitude Infotech"><meta name="viewport" content="minimum-scale=1,initial-scale=1,width=device-width,shrink-to-fit=no"><!-- Web Application Manifest --><link rel="manifest" href="manifest.json"><!-- Add to homescreen for Chrome on Android --><meta name="mobile-web-app-capable" content="yes"><meta name="application-name" content="CloudCompare"><meta name="theme-color" content="#ffffff"><!-- Add to homescreen for Safari on iOS --><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-title" content="CloudCompare"><meta name="apple-mobile-web-app-status-bar-style" content="#ffffff"><link rel="apple-touch-icon" href="app-icon.png"><link rel="apple-touch-startup-image" href="app-icon.png"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons"></head><body><noscript>JavaScript Disabled</noscript><!-- App Root --><div id="aiRoot"></div><script type="text/javascript" src="main.13b7cd92f0621e441eeb.js"></script></body></html>
